--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<head>
 		<title>Manar's Website</title>
 		<meta charset="utf-8"/>
-				<link type="text/css" rel="stylesheet" href="CSS/index.css" />
+				<link type="text/css" rel="stylesheet" href="index.css" />
 
 
 	</head>
