--- a/publish_event.html
+++ b/publish_event.html
@@ -3,7 +3,7 @@
 		<title>Manar's Website</title>
 		<meta charset="utf-8"/>
                         <script src="JS/publishe_event.js"></script>
-				 <link type="text/css" rel="stylesheet" href="CSS/publish_event.css" />
+				 <link type="text/css" rel="stylesheet" href="publish_event.css"/>
 
 	</head>
 	<body>
