--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Manar's Website</title>
 		<meta charset="utf-8"/>
-				<link type="text/css" rel="stylesheet" href="CSS/about.css" />
+				<link type="text/css" rel="stylesheet" href="about.css"/>
 
 
 	</head>
