--- a/display.html
+++ b/display.html
@@ -3,7 +3,7 @@
 		<title>Manar's Website</title>
 		<meta charset="utf-8"/>
         <script src="JS/display.js"></script>
-      <link type="text/css" rel="stylesheet" href="CSS/display.css" />
+      <link type="text/css" rel="stylesheet" href="display.css"/>
 
 	</head>
 	<body>
