--- a/courses.html
+++ b/courses.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Manar's Website</title>
 		<meta charset="utf-8"/>
-		<link type="text/css" rel="stylesheet" href="CSS/courses.css" />
+		<link type="text/css" rel="stylesheet" href="courses.css"/>
 		
 
 	</head>
