--- a/publish_event.html
+++ b/publish_event.html
@@ -2,7 +2,7 @@
 	<head>
 		<title>Manar's Website</title>
 		<meta charset="utf-8"/>
-                        <script src="JS/publishe_event.js"></script>
+                        <script src="publishe_event.js"></script>
 				 <link type="text/css" rel="stylesheet" href="publish_event.css"/>
 
 	</head>
